# INDI_ART

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  smoketest.py
.github/workflows/: main.yml
src/: __init__.py  config.py  model.py  utils.py
