[project]
name = "indi-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.33.0",
    "diffusers==0.30.0",
    "gradio==4.42.0",
    "invisible-watermark>=0.2.0",
    "numpy<2",
    "peft==0.12.0",
    "pillow==10.4.0",
    "safetensors==0.4.4",
    "spaces==0.30.0",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "transformers==4.44.0",
]
